--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
     }
     .backdrop{position:fixed; inset:0; background:rgba(5,12,28,.55);}
     .page{position:relative; z-index:1; width:100%; padding:32px 16px 60px; display:grid; place-items:center;}
-    .card{width:var(--card-w); background:rgba(255,255,255,.9); backdrop-filter:blur(var(--bg-blur));
-      border-radius:22px; box-shadow:0 20px 60px rgba(0,0,0,.35); overflow:hidden; border:1px solid rgba(255,255,255,.6);}
+    .card{width:var(--card-w); background:rgba(255,255,255,.9); backdrop-filter:blur(var(--bg-blur)); border-radius:22px; box-shadow:0 20px 60px rgba(0,0,0,.35); overflow:hidden; border:1px solid rgba(255,255,255,.6);}
     .header{background:linear-gradient(120deg, var(--brand), #6a8df8 60%); color:#fff; padding:22px 24px;}
     .header .title{font-size:clamp(22px,3.2vw,28px); font-weight:800; margin:0 0 4px;}
     .header .subtitle{opacity:.92; margin:0; font-size:14px}
     .content{padding:22px 22px 8px;}
-    .badge{display:none; align-items:center; gap:8px; background:#fff; color:var(--brand); font-weight:800;
-      border-radius:999px; padding:8px 14px; border:1px solid rgba(13,30,68,.1); box-shadow:0 4px 14px rgba(27,72,240,.18); margin:-48px 0 14px;}
+    .badge{display:none; align-items:center; gap:8px; background:#fff; color:var(--brand); font-weight:800; border-radius:999px; padding:8px 14px; border:1px solid rgba(13,30,68,.1); box-shadow:0 4px 14px rgba(27,72,240,.18); margin:-48px 0 14px;}
     .badge.show{display:inline-flex}
     .amount{font-size:26px}
     .h1{font-size:clamp(20px,2.8vw,24px); margin:6px 0 10px; font-weight:800}
@@ -46,8 +44,7 @@
     .row{display:flex; gap:12px; flex-wrap:wrap}
     .row .field{flex:1 1 220px}
     .btn{cursor:pointer; user-select:none; height:52px; border-radius:16px; border:0; font-weight:800; letter-spacing:.2px; font-size:16px;
-      background:linear-gradient(120deg, var(--accent), #ff7a70); color:#fff; box-shadow:0 12px 30px rgba(255,61,46,.35);
-      transition: transform .06s, filter .2s;}
+      background:linear-gradient(120deg, var(--accent), #ff7a70); color:#fff; box-shadow:0 12px 30px rgba(255,61,46,.35); transition: transform .06s, filter .2s;}
     .btn:hover{filter:brightness(1.05)} .btn:active{transform:translateY(1px)} .btn[disabled]{opacity:.65; cursor:not-allowed}
     .legal{font-size:12px; color:var(--text-weak); text-align:center; padding:10px 18px 20px}
     .status{display:none; gap:10px; align-items:flex-start; border-radius:14px; padding:14px; margin-top:12px}
