--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         <span id="amountBadge" class="badge"><span>Сумма:</span> <span class="amount">15 000 ₽</span></span>
 
         <div class="h1">Шаг 1. Код сертификата</div>
-        <p class="p">Введите код формата <strong>XXXX-XXXX-XXXX-XXXX</strong>. Если пришли по персональной ссылке, поле заполнится автоматически.</p>
+        <p class="p">Введите код формата <strong>KP-XXXX-XXXX-XXXX</strong>. Если пришли по персональной ссылке, поле заполнится автоматически.</p>
 
         <form id="codeForm" novalidate>
           <div class="row">
             <div class="field" style="flex:1 1 100%">
               <label for="giftcode">Код</label>
-              <input id="giftcode" name="giftcode" type="text" placeholder="KP-1421-DSCR-4124" autocomplete="one-time-code" />
+              <input id="giftcode" name="giftcode" type="text" placeholder="KP-XXXX-XXXX-XXXX" autocomplete="one-time-code" />
             </div>
           </div>
           <button class="btn" type="submit" id="checkBtn">Проверить код</button>
