--- a/index.html
+++ b/index.html
@@ -49,8 +49,19 @@
     input:focus{border-color:var(--brand); box-shadow:0 0 0 4px rgba(27,72,240,.12)}
     .row{display:flex; gap:12px; flex-wrap:wrap}
     .row .field{flex:1 1 220px}
-    .btn{cursor:pointer; user-select:none; height:52px; border-radius:16px; border:0; font-weight:800; letter-spacing:.2px; font-size:16px; background:linear-gradient(120deg, var(--accent), #ff7a70); color:#fff; box-shadow:0 12px 30px rgba(255,61,46,.35); transition: transform .06s, filter .2s;}
-    .btn:hover{filter:brightness(1.05)} .btn:active{transform:translateY(1px)} .btn[disabled]{opacity:.65; cursor:not-allowed}
+    .btn{
+      cursor:pointer; user-select:none; height:52px; border-radius:16px; border:0;
+      font-weight:800; letter-spacing:.2px; font-size:16px;
+      background:linear-gradient(120deg, var(--accent), #ff7a70);
+      color:#fff; box-shadow:0 12px 30px rgba(255,61,46,.35);
+      transition: transform .06s, filter .2s;
+      width:100%;
+      display:inline-flex; align-items:center; justify-content:center;
+      text-decoration:none; padding:0 18px;
+    }
+    .btn:hover{filter:brightness(1.05)}
+    .btn:active{transform:translateY(1px)}
+    .btn[disabled]{opacity:.65; cursor:not-allowed}
     .legal{font-size:12px; color:var(--text-weak); text-align:center; padding:10px 18px 20px}
     .status{display:none; gap:10px; align-items:flex-start; border-radius:14px; padding:14px; margin-top:12px}
     .status.show{display:flex}
@@ -66,7 +77,7 @@
     .footer-brand strong{color:#fff}
     .art{width:var(--card-w); max-width:680px; margin:0 auto -24px; display:block}
     .hidden{display:none}
-    .final{display:none; padding:24px; text-align:center}
+    .final{display:none; padding:10px 0 8px; text-align:center}
     .final.show{display:block}
   </style>
 </head>
@@ -122,8 +133,12 @@
 
         <!-- Финальный экран -->
         <div id="finalAction" class="final">
-          <p class="p" style="margin-bottom:14px">Перенаправление завершено.</p>
           <a id="cabinetBtn" class="btn" href="#">Перейти в личный кабинет</a>
+
+          <div id="credited" class="status ok show" style="margin-top:16px;">
+            <div class="dot"></div>
+            <div><strong>Успех!</strong> На ваш баланс было зачислено 15 000 ₽.</div>
+          </div>
         </div>
       </div>
 
@@ -135,7 +150,7 @@
 
   <script>
     const VALID_CODE = 'KP-1421-DSCR-4124';
-    const CABINET_URL = 'https://kiberpride.ru/'; // ← при необходимости замени на адрес личного кабинета
+    const CABINET_URL = 'https://kiberpride.ru/'; // замени на адрес личного кабинета
 
     const codeForm = document.getElementById('codeForm');
     const giftInput = document.getElementById('giftcode');
@@ -185,7 +200,7 @@
       }, delay);
     });
 
-    // Активация (ожидание ~5 секунд)
+    // Активация (ожидание ~5 секунд), затем показ финального экрана
     actForm?.addEventListener('submit', (e) => {
       e.preventDefault();
       const phone = cleanPhone(phoneInput.value);
@@ -206,12 +221,13 @@
         success.classList.add('show');
         actForm.querySelector('.btn').textContent = 'Заявка отправлена';
 
-        // Через 10–15 секунд скрываем Шаг 1 и Шаг 2, показываем кнопку «Личный кабинет»
+        // Через 10–15 секунд скрываем шаги и показываем финальный экран
         const finishDelay = 10000 + Math.floor(Math.random() * 5000);
         setTimeout(() => {
-          // Скрыть все элементы шагов
           document.querySelectorAll('#codeForm, #step2, .h1, .p, #amountBadge').forEach(el => el?.classList.add('hidden'));
           finalAction.classList.add('show');
+          // Автофокус на кнопке для удобства
+          document.getElementById('cabinetBtn').focus();
         }, finishDelay);
 
       }, 5000);
